--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,2 +1,2 @@
-body    { padding-top:50px; }
-.container .jumbotron    { border-radius:40px; }
+﻿body    { padding-top:50px; }
+.container { border-radius:40px; }
