--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,11 +17,11 @@
 <p>3) If it does not contain a date or Unix timestamp, it returns null for those properties.</p>
         <p></p><br />
 <h2>Example usage:</h2>
-<p>https://timestamp-ms.herokuapp.com/December%2015,%202015<br />
+<p class="example">https://timestamp-ms.herokuapp.com/December%2015,%202015<br />
 https://timestamp-ms.herokuapp.com/1450137600</p>
 
 <h2>Example output:</h2>
-<p>{ "unix": 1450137600, "natural": "December 15, 2015" }</p>
+<p class="example">{ "unix": 1450137600, "natural": "December 15, 2015" }</p>
 </div>
     
 </body>
