--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,8 +17,9 @@
 <p>3) If it does not contain a date or Unix timestamp, it returns null for those properties.</p>
         <p></p><br />
 <h2>Example usage:</h2>
-<p class="example">https://fast-reaches-86182.herokuapp.com/December%2015,%202015<br />
-https://fast-reaches-86182.herokuapp.com/1450137600</p>
+<p class="example"><a href="https://fast-reaches-86182.herokuapp.com/December%2015,%202015">https://fast-reaches-86182.herokuapp.com/December%2015,%202015
+</a><br />
+<a href="https://fast-reaches-86182.herokuapp.com/1450137600">https://fast-reaches-86182.herokuapp.com/1450137600</a></p>
 
 <h2>Example output:</h2>
 <p class="example">{ "unix": 1450137600, "natural": "December 15, 2015" }</p>
