Changed example font color to #c40b21

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 ﻿body    { padding-top:50px; }
 .container { border-radius:40px; }
-.example { color: #910516}
+.example { color: #c40b21}
 a:link {
     text-decoration: none;
 }
