--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <div class="container">
         <h1>API Basejump: Timestamp Microservice</h1>
 	<h3>User stories:</h3>
-	<p>1) I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: January 1, 2016)</p>
+	<p>1) I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: January 1, 2016).</p>
 <p>2) If it does, it returns both the Unix timestamp and the natural language form of that date.</p>
 <p>3) If it does not contain a date or Unix timestamp, it returns null for those properties.</p>
         <p></p><br />
